YI-227: spacing fix, PCI/HIPPA colors

--- a/web/themes/custom/yale_infosec/components/03-organisms/mss-calc/_mss-calc.scss
+++ b/web/themes/custom/yale_infosec/components/03-organisms/mss-calc/_mss-calc.scss
@@ -8,6 +8,10 @@
 .yi-mss-calculator-form {
   grid-area: content;
 
+  .form-fieldset:first-child {
+    margin-top: $space;
+  }
+
   .fieldgroup {
     legend {
       margin-bottom: $space-half;
